--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -97,7 +97,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="login.html">
+                        <a href="/Login/Logout">
                             <i class="fa fa-sign-out"></i>
                             <span>Çıkış Yap</span>
                         </a>
