Controller tarafında düzenlemeler yapıldı. Şirket ekleme, düzenleme, silme işlemleri eklendi.

--- a/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
@@ -26,7 +26,7 @@
             <a href="/Mail/Sendbox"><i class="fa fa-envelope-o"></i> Gönderilenler <span class="label label-danger pull-right">@TempData["SendBoxCount"]</span></a>
         </li>
         <li>
-            <a href="inbox.html#"><i class=" fa fa-trash-o"></i> Trash</a>
+            <a href="/Mail"><i class=" fa fa-trash-o"></i> Trash</a>
         </li>
     </ul>
 
