--- a/FlatLabProjectWebApplication/Views/Company/EditCompany.cshtml
+++ b/FlatLabProjectWebApplication/Views/Company/EditCompany.cshtml
@@ -1,18 +1,18 @@
 ﻿@model EntityLayer.Concrete.Company
 
 @{
-    ViewBag.Title = "EditCompany";
+    ViewBag.Title = "Şirket Bilgileri";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>EditCompany</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditCompany", "Company", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Company</h4>
+        <h4>Şirket Bilgilerini Düzenle</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CompanyID)
@@ -43,12 +43,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Kaydet" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
