--- a/FlatLabProjectWebApplication/Views/Company/Index.cshtml
+++ b/FlatLabProjectWebApplication/Views/Company/Index.cshtml
@@ -1,46 +1,42 @@
 ﻿@model IEnumerable<EntityLayer.Concrete.Company>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Şirket Yönetimi";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CompanyTitle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyTitle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CompanyID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CompanyID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CompanyID })
-        </td>
-    </tr>
-}
-
-</table>
+<section class="wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel">
+                <header class="panel-heading">
+                    Şirket Listesi
+                </header>
+                <table class="table table-striped table-advance table-hover">
+                    <thead>
+                        <tr>
+                            <th><i class="fa fa-bullhorn"></i> Ünvan</th>
+                            <th class="hidden-phone"><i class="fa fa-question-circle"></i> İrtibat Tel</th>
+                            <th>Durum</th>
+                            <th><i class=" fa fa-edit"></i> İşlem</th>
+                        </tr>
+                    </thead>
+                    @foreach (var item in Model)
+                    {
+                        <tbody>
+                            <tr>
+                                <td><a href="basic_table.html#">@Html.DisplayFor(modelItem => item.CompanyTitle)</a></td>
+                                <td class="hidden-phone">@Html.DisplayFor(modelItem => item.Phone)</td>
+                                <td><span class="label label-info label-mini">@Html.DisplayFor(modelItem => item.Address)</span></td>
+                                <td>
+                                    <a href="/Company/EditCompany/@item.CompanyID" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                    <a href="/Company/DeleteCompany/@item.CompanyID" class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    }
+                </table>
+            </section>
+        </div>
+    </div>
+</section>
