--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -43,7 +43,7 @@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <span class="username">Jhon Doue</span>
+                            <span class="username">@Session["UserName"]</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
@@ -51,7 +51,7 @@
                             <li><a href="index.html#"><i class=" fa fa-suitcase"></i>Profile</a></li>
                             <li><a href="index.html#"><i class="fa fa-cog"></i> Settings</a></li>
                             <li><a href="index.html#"><i class="fa fa-bell-o"></i> Notification</a></li>
-                            <li><a href="login.html"><i class="fa fa-key"></i> Log Out</a></li>
+                            <li><a href="/Login/Logout"><i class="fa fa-key"></i>Çıkış Yap</a></li>
                         </ul>
                     </li>
                     <!-- user login dropdown end -->
@@ -71,7 +71,8 @@
                             <span>Şirket İşlemleri</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="boxed_page.html">Yeni Şirket</a></li>
+                            <li><a href="/Company/AddCompany">Yeni Şirket Oluştur</a></li>
+                            <li><a href="/Company">Şirketleri Düzenle</a></li>
                             <li><a href="boxed_page.html">Yetkileri Düzenle</a></li>
                         </ul>
                     </li>
