Tablolar düzenlendi. Şirket, yönetici, personel ekleme, düzenleme ve silme işlemleri eklendi ve sorunlar giderildi. Yönetici ve şirket seçimleri drop down list e bağlandı.

--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -33,7 +33,7 @@
                 <i class="fa fa-bars"></i>
             </div>
             <!--logo start-->
-            <a href="index.html" class="logo">Admin<span>Panel</span></a>
+            <a href="/Admin" class="logo">Admin<span>Panel</span></a>
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
             </div>
@@ -83,8 +83,8 @@
                             <span class="dcjq-icon"></span>
                         </a>
                         <ul class="sub">
-                            <li><a href="boxed_page.html">Yönetici Ekle</a></li>
-                            <li><a href="boxed_page.html">Yöneticileri Düzenle</a></li>
+                            <li><a href="/Manager/AddManager">Yönetici Ekle</a></li>
+                            <li><a href="/Manager">Yöneticileri Düzenle</a></li>
                         </ul>
                     </li>
                     <li class="sub-menu">
@@ -93,8 +93,8 @@
                             <span>Personel İşlemleri</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="boxed_page.html">Personel Ekle</a></li>
-                            <li><a href="boxed_page.html">Yöneticileri Düzenle</a></li>
+                            <li><a href="/Personnel/AddPersonnel">Personel Ekle</a></li>
+                            <li><a href="/Personnel/Index">Personelleri Düzenle</a></li>
                         </ul>
                     </li>
                     <li>
