--- a/FlatLabProjectWebApplication/Views/Company/Index.cshtml
+++ b/FlatLabProjectWebApplication/Views/Company/Index.cshtml
@@ -16,16 +16,16 @@
                     <thead>
                         <tr>
                             <th><i class="fa fa-bullhorn"></i> Ünvan</th>
-                            <th class="hidden-phone"><i class="fa fa-question-circle"></i> İrtibat Tel</th>
-                            <th>Durum</th>
-                            <th><i class=" fa fa-edit"></i> İşlem</th>
+                            <th class="hidden-phone"><i class="glyphicon glyphicon-earphone"></i> İrtibat Tel</th>
+                            <th><i class="glyphicon glyphicon-stats"></i> Durum</th>
+                            <th><i class="glyphicon glyphicon-pencil"></i> İşlem</th>
                         </tr>
                     </thead>
                     @foreach (var item in Model)
                     {
                         <tbody>
                             <tr>
-                                <td><a href="basic_table.html#">@Html.DisplayFor(modelItem => item.CompanyTitle)</a></td>
+                                <td><a href="/Company/EditCompany/@item.CompanyID">@Html.DisplayFor(modelItem => item.CompanyTitle)</a></td>
                                 <td class="hidden-phone">@Html.DisplayFor(modelItem => item.Phone)</td>
                                 <td><span class="label label-info label-mini">@Html.DisplayFor(modelItem => item.Address)</span></td>
                                 <td>
