--- a/FlatLabProjectWebApplication/Views/Personnel/Index.cshtml
+++ b/FlatLabProjectWebApplication/Views/Personnel/Index.cshtml
@@ -4,61 +4,42 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SurName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Company)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SurName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Company)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PersonnelID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PersonnelID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PersonnelID })
-        </td>
-    </tr>
-}
-
-</table>
+<section class="wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel">
+                <header class="panel-heading">
+                    Personel Listesi
+                </header>
+                <table class="table table-striped table-advance table-hover">
+                    <thead>
+                        <tr>
+                            <th><i class="fa fa-bullhorn"></i> Mail</th>
+                            <th class="hidden-phone"><i class="glyphicon glyphicon-earphone"></i> Ad</th>
+                            <th><i class="glyphicon glyphicon-stats"></i> Soyad</th>
+                            <th><i class="glyphicon glyphicon-stats"></i> Şirket</th>
+                            <th><i class="glyphicon glyphicon-stats"></i> Task Sayısı</th>
+                            <th><i class="glyphicon glyphicon-pencil"></i> İşlem</th>
+                        </tr>
+                    </thead>
+                    @foreach (var item in Model)
+                    {
+                        <tbody>
+                            <tr>
+                                <td><a href="/Personnel/EditPersonnel/@item.PersonnelID">@Html.DisplayFor(modelItem => item.MailAddress)</a></td>
+                                <td class="hidden-phone">@Html.DisplayFor(modelItem => item.Name)</td>
+                                <td class="hidden-phone">@Html.DisplayFor(modelItem => item.SurName)</td>
+                                <td class="hidden-phone">@Html.DisplayFor(modelItem => item.Company.CompanyTitle)</td>
+                                <td><span class="label label-info label-mini">@Html.DisplayFor(modelItem => item.Role)</span></td>
+                                <td>
+                                    <a href="/Personnel/EditPersonnel/@item.PersonnelID" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                    <a href="/Personnel/DeletePersonnel/@item.PersonnelID" class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    }
+                </table>
+            </section>
+        </div>
+    </div>
+</section>
