--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -43,7 +43,7 @@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <span class="username">@Session["UserName"]</span>
+                            <span class="username">@User.Identity.Name</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
