--- a/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,12 +130,12 @@
                     <li id="header_inbox_bar" class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
                             <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-important">5</span>
+                            <span class="badge bg-important">@TempData["InboxCount"]</span>
                         </a>
                         <ul class="dropdown-menu extended inbox">
                             <div class="notify-arrow notify-arrow-red"></div>
                             <li>
-                                <p class="red">You have 5 new messages</p>
+                                <p class="red">You have @TempData["InboxCount"] new messages</p>
                             </li>
                             <li>
                                 <a href="index.html#">
@@ -256,7 +257,7 @@
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
                             <img alt="" src="~/flatlab-master/img/avatar1_small.jpg">
-                            <span class="username">@Session["UserName"]</span>
+                            <span class="username">@User.Identity.Name</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
@@ -287,12 +288,37 @@
                             <span>Durum Paneli</span>
                         </a>
                     </li>
-                    <li>
-                        <a class="" href="/Home/Index">
-                            <i class="fa fa-trophy"></i>
-                            <span>Görevler</span>
-                        </a>
-                    </li>
+                    @if (User.IsInRole("Personnel"))
+
+                    {
+                        <li class="sub-menu">
+                            <a href="javascript:;">
+                                <i class="fa fa-user"></i>
+                                <span>Task İşlemleri</span>
+                                <span class="dcjq-icon"></span>
+                            </a>
+                            <ul class="sub">
+                                <li>
+                                    <a class="" href="/Home/Index">
+                                        <i class="fa fa-trophy"></i>
+                                        <span>Görevlerim</span>
+                                    </a>
+                                </li>
+                                <li><a href="/Job/AddJob">Görev Oluştur</a></li>
+                            </ul>
+                        </li>
+                    }
+
+                    @if (User.IsInRole("Manager"))
+
+                    {
+                        <li>
+                            <a class="" href="/Home/Index">
+                                <i class="fa fa-trophy"></i>
+                                <span>Görevlerim</span>
+                            </a>
+                        </li>
+                    }
                     <li>
                         <a class="" href="/Mail/Inbox">
                             <i class="fa fa-envelope"></i>
@@ -448,7 +474,6 @@
                                 <span class="sr-only">45% Complete</span>
                             </div>
                         </div>
-
                     </a>
                 </li>
                 <li class="external">
