--- a/FlatLabProjectWebApplication/Views/Mail/SearchMail.cshtml
+++ b/FlatLabProjectWebApplication/Views/Mail/SearchMail.cshtml
@@ -23,6 +23,10 @@
         </li>
     </ul>
 }*@
+@if (Model.Count() > 0)
+
+{
+
 <div class="inbox-head">
     <h3>Arama Sonuçları</h3>
 </div>
@@ -62,3 +66,4 @@
 </table>
 
 <hr />
+}
