--- a/FlatLabProjectWebApplication/Views/Job/AddJob.cshtml
+++ b/FlatLabProjectWebApplication/Views/Job/AddJob.cshtml
@@ -1,85 +1,104 @@
 ﻿@model EntityLayer.Concrete.Job
 
 @{
-    Layout = null;
+    ViewBag.Title = "AddJob";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="~/flatlab-master/assets/bootstrap-datepicker/css/datepicker.css" />
+<link rel="stylesheet" type="text/css" href="~/flatlab-master/assets/bootstrap-datetimepicker/css/datetimepicker.css" />
+<h2>AddJob</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>AddJob</title>
-</head>
-<body>
-    @using (Html.BeginForm()) 
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            <h4>Job</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Priority, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Priority, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Urgency, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Urgency)
-                        @Html.ValidationMessageFor(model => model.Urgency, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Contents, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.RemainingTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.RemainingTime, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RemainingTime, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Document, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Document, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Document, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="inbox-head" style="text-align:center; margin-bottom:15px;">
+        <h3>Yeni Görev Ekle</h3>
+    </div>
+    <div class="form-horizontal container">
+        <div class="form-group">
+            <label class="col-md-2">Konu</label>
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <label class="col-md-2">Aciliyet Durumu</label>
+            <div class="col-md-7">
+                @Html.DropDownListFor(model => model.Priority, (List<SelectListItem>)ViewBag.Priority, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Priority, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-md-2">Ayrıntı</label>
+            <div class="col-md-7">
+                @Html.TextAreaFor(model => model.Contents, 10, 92, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-md-2">Teslim Tarihi</label>
+            <div class="col-md-5">
+                <div class="input-group date form_datetime-component">
+                    <input type="text" class="form-control" readonly="" size="16">
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-danger date-set"><i class="fa fa-calendar"></i></button>
+                    </span>
+                </div>
+                @Html.ValidationMessageFor(model => model.CompletionDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        @*<div class="form-group">
+            <label class="col-md-2">Son Tarih</label>
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.CompletionDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CompletionDate, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+        <div class="form-group">
+            <label class="col-md-2">Dökümanlar</label>
+            <div class="col-md-7">
+                @Html.EditorFor(model => model.Document, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Document, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-md-2">Personeller</label>
+            <div class="col-md-7">
+                @Html.DropDownListFor(model => model.Personnels, (List<SelectListItem>)ViewBag.personnelList, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Personnels, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <br />
+            <br />
+            <div class="col-md-offset-2 col-md-2">
+                <input type="submit" value="Onayla" class="btn btn-primary btn-lg" />
+            </div>
+            <div class="col-md-5">
+                <button style="float:right" type="reset" value="Temizle" class="btn btn-default btn-lg">Temizle</button>
+            </div>
+        </div>
     </div>
-</body>
-</html>
+}
+
+
+<!--this page plugins-->
+<script type="text/javascript" src="~/flatlab-master/assets/bootstrap-fileupload/bootstrap-fileupload.js"></script>
+<script type="text/javascript" src="~/flatlab-master/assets/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
+
+<!--this page  script only-->
+<script src="~/flatlab-master/js/advanced-form-components.js"></script>
+
+
+
