--- a/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
@@ -11,15 +11,14 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="http://thevectorlab.net/flatlab/~/flatlab-master/img/favicon.png">
 
-    <title>FlatLab - Flat & Responsive Bootstrap Admin Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="~/flatlab-master/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/flatlab-master/css/bootstrap-reset.css" rel="stylesheet">
+    <link href="~/flatlab-master/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/flatlab-master/css/bootstrap-reset.css" rel="stylesheet" />
     <!--external css-->
-    <link rel="stylesheet" href="~/flatlab-master/assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/flatlab-master/assets/font-awesome/css/font-awesome.css" />
     <link href="~/flatlab-master/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen" />
-    <link rel="stylesheet" href="~/flatlab-master/css/owl.carousel.css" type="text/css">
+    <link rel="stylesheet" href="~/flatlab-master/css/owl.carousel.css" type="text/css" />
 
     <!--right slidebar-->
     <link href="~/flatlab-master/css/slidebars.css" rel="stylesheet">
@@ -42,209 +41,7 @@
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
                 <!--  notification start -->
-                <ul class="nav top-menu">
-                    <!-- settings start -->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <i class="fa fa-tasks"></i>
-                            <span class="badge bg-success">6</span>
-                        </a>
-                        <ul class="dropdown-menu extended tasks-bar">
-                            <div class="notify-arrow notify-arrow-green"></div>
-                            <li>
-                                <p class="green">You have 6 pending tasks</p>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Dashboard v1.3</div>
-                                        <div class="percent">40%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                            <span class="sr-only">40% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Database Update</div>
-                                        <div class="percent">60%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                            <span class="sr-only">60% Complete (warning)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Iphone Development</div>
-                                        <div class="percent">87%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 87%">
-                                            <span class="sr-only">87% Complete</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Mobile App</div>
-                                        <div class="percent">33%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 33%">
-                                            <span class="sr-only">33% Complete (danger)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Dashboard v1.3</div>
-                                        <div class="percent">45%</div>
-                                    </div>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-                                            <span class="sr-only">45% Complete</span>
-                                        </div>
-                                    </div>
-
-                                </a>
-                            </li>
-                            <li class="external">
-                                <a href="index.html#">See All Tasks</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- settings end -->
-                    <!-- inbox dropdown start-->
-                    <li id="header_inbox_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-important">@TempData["InboxCount"]</span>
-                        </a>
-                        <ul class="dropdown-menu extended inbox">
-                            <div class="notify-arrow notify-arrow-red"></div>
-                            <li>
-                                <p class="red">You have @TempData["InboxCount"] new messages</p>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~/flatlab-master/img/avatar-mini.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Jonathan Smith</span>
-                                        <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hello, this is an example msg.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~/flatlab-master/img/avatar-mini2.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Jhon Doe</span>
-                                        <span class="time">10 mins</span>
-                                    </span>
-                                    <span class="message">
-                                        Hi, Jhon Doe Bhai how are you ?
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~/flatlab-master/img/avatar-mini3.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Jason Stathum</span>
-                                        <span class="time">3 hrs</span>
-                                    </span>
-                                    <span class="message">
-                                        This is awesome dashboard.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~/flatlab-master/img/avatar-mini4.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Jondi Rose</span>
-                                        <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hello, this is metrolab
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">See all messages</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- inbox dropdown end -->
-                    <!-- notification dropdown start-->
-                    <li id="header_notification_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-
-                            <i class="fa fa-bell-o"></i>
-                            <span class="badge bg-warning">7</span>
-                        </a>
-                        <ul class="dropdown-menu extended notification">
-                            <div class="notify-arrow notify-arrow-yellow"></div>
-                            <li>
-                                <p class="yellow">You have 7 new notifications</p>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                    Server #3 overloaded.
-                                    <span class="small italic">34 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-warning"><i class="fa fa-bell"></i></span>
-                                    Server #10 not respoding.
-                                    <span class="small italic">1 Hours</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                    Database overloaded 24%.
-                                    <span class="small italic">4 hrs</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-success"><i class="fa fa-plus"></i></span>
-                                    New user registered.
-                                    <span class="small italic">Just now</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-info"><i class="fa fa-bullhorn"></i></span>
-                                    Application error.
-                                    <span class="small italic">10 mins</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">See all notifications</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- notification dropdown end -->
-                </ul>
+                @Html.Action("Notification", "Notifications")
                 <!--  notification end -->
             </div>
             <div class="top-nav ">
@@ -493,6 +290,10 @@
         </footer>
         <!--footer end-->
     </section>
+
+
+
+
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="~/flatlab-master/js/jquery.js"></script>
     <script src="~/flatlab-master/js/bootstrap.min.js"></script>
@@ -501,9 +302,9 @@
     <script src="~/flatlab-master/js/jquery.nicescroll.js" type="text/javascript"></script>
     <script src="~/flatlab-master/js/jquery.sparkline.js" type="text/javascript"></script>
     <script src="~/flatlab-master/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.js"></script>
-    <script src="~/flatlab-master/js/owl.carousel.js"></script>
     <script src="~/flatlab-master/js/jquery.customSelect.min.js"></script>
     <script src="~/flatlab-master/js/respond.min.js"></script>
+    <script src="~/flatlab-master/js/owl.carousel.js"></script>
 
     <!--right slidebar-->
     <script src="~/flatlab-master/js/slidebars.min.js"></script>
@@ -515,6 +316,7 @@
     <script src="~/flatlab-master/js/sparkline-chart.js"></script>
     <script src="~/flatlab-master/js/easy-pie-chart.js"></script>
     <script src="~/flatlab-master/js/count.js"></script>
+
     <script>
 
         //owl carousel
