--- a/FlatLabProjectWebApplication/Views/Manager/AddManager.cshtml
+++ b/FlatLabProjectWebApplication/Views/Manager/AddManager.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group">
             <label class="col-md-2">Şifre</label>
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
