--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -42,15 +42,15 @@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <span class="username">@User.Identity.Name</span>
+                            <span class="username">@User.Identity.Name.Split('@').First()</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
                             <div class="log-arrow-up"></div>
-                            <li><a href="index.html#"><i class=" fa fa-suitcase"></i>Profile</a></li>
-                            <li><a href="index.html#"><i class="fa fa-cog"></i> Settings</a></li>
-                            <li><a href="index.html#"><i class="fa fa-bell-o"></i> Notification</a></li>
-                            <li><a href="/Login/Logout"><i class="fa fa-key"></i>Çıkış Yap</a></li>
+                            <li><a href="/Personnel/EditPersonnel"><i class=" fa fa-suitcase"></i>Profil</a></li>
+                            <li><a href="index.html#"><i class="fa fa-cog"></i> Ayarlar</a></li>
+                            <li><a href="index.html#"><i class="fa fa-bell-o"></i> Bildirimler</a></li>
+                            <li><a href="/Login/Logout"><i class="fa fa-key"></i> Çıkış Yap</a></li>
                         </ul>
                     </li>
                     <!-- user login dropdown end -->
