--- a/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_Layout.cshtml
@@ -49,13 +49,13 @@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <img alt="" src="~/flatlab-master/img/avatar1_small.jpg">
-                            <span class="username">@User.Identity.Name</span>
+                            <img alt="avatar" src="img/avatar1_small.jpg">
+                            <span class="username">@User.Identity.Name.Split('@').First()</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
                             <div class="log-arrow-up"></div>
-                            <li><a href="/Personnel/EditPersonnel"><i class=" fa fa-suitcase"></i>Profil</a></li>
+                            <li><a href="/Personnel/EditPersonnel/@User.Identity.Name.Split('@').First()"><i class=" fa fa-suitcase"></i>Profil</a></li>
                             <li><a href="index.html#"><i class="fa fa-cog"></i> Ayarlar</a></li>
                             <li><a href="index.html#"><i class="fa fa-bell-o"></i> Bildirimler</a></li>
                             <li><a href="/Login/Logout"><i class="fa fa-key"></i> Çıkış Yap</a></li>
