--- a/FlatLabProjectWebApplication/Views/Mail/Inbox.cshtml
+++ b/FlatLabProjectWebApplication/Views/Mail/Inbox.cshtml
@@ -72,7 +72,12 @@
                     </div>
 
                     <ul class="unstyled inbox-pagination">
-                        <li><span>1-@Model.Count() dan @Model.Count()</span></li>
+                        <li>
+                            <span>
+                                1-50 / @Model.Count()
+                            </span>
+                        </li>
+                        <li>
                         <li>
                             <a href="inbox.html#" class="np-btn"><i class="fa fa-angle-left  pagination-left"></i></a>
                         </li>
