--- a/FlatLabProjectWebApplication/Views/Mail/Sendbox.cshtml
+++ b/FlatLabProjectWebApplication/Views/Mail/Sendbox.cshtml
@@ -43,7 +43,8 @@
                         </a>
                     </div>
                     <ul class="unstyled inbox-pagination">
-                        <li><span>1-50 of 234</span></li>
+                        <li><span>
+                            1-50 / @Model.Count()</span></li>
                         <li>
                             <a href="inbox.html#" class="np-btn"><i class="fa fa-angle-left  pagination-left"></i></a>
                         </li>
