--- a/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/_AdminLayout.cshtml
@@ -42,6 +42,7 @@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                            <img alt="" src="img/avatar1_small.jpg">
                             <span class="username">@User.Identity.Name.Split('@').First()</span>
                             <b class="caret"></b>
                         </a>
