--- a/FlatLabProjectWebApplication/Views/Mail/GetMailDetails.cshtml
+++ b/FlatLabProjectWebApplication/Views/Mail/GetMailDetails.cshtml
@@ -38,7 +38,7 @@
 
                     </div>
                     <div class="col-md-4 text-right">
-                        <p class="date"> @Model.Date.ToString("dd MM yyyy hh:mm") </p>
+                        <p class="date"> @Model.Date.ToString("dd/MM/yyyy hh:mm") </p>
                     </div>
                     <div class="col-md-12">
                         <h4>@Model.Subject</h4>
