--- a/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
+++ b/FlatLabProjectWebApplication/Views/Shared/MessageListMenu.cshtml
@@ -25,7 +25,7 @@
             <a href="/Mail/Sendbox"><i class="fa fa-envelope-o"></i> Gönderilenler <span class="label label-danger pull-right">@TempData["SendBoxCount"]</span></a>
         </li>
         <li>
-            <a href="/Mail"><i class=" fa fa-trash-o"></i> Trash</a>
+            <a href="/Mail"><i class=" fa fa-trash-o"></i> Çöp Kutusu</a>
         </li>
     </ul>
 
